--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,3 @@
-/*# Front-end Style Guide
-
-## Layout
-
-The designs were created to the following widths:
-
-- Mobile: 375px
-- Desktop: 1440px
-
-## Colors
-
-### Primary
-
-- Very dark blue (main background): hsl(233, 47%, 7%)
-- Dark desaturated blue (card background): hsl(244, 38%, 16%)
-- Soft violet (accent): hsl(277, 64%, 61%)
-
-### Neutral
-
-- White (main heading, stats): hsl(0, 0%, 100%)
-- Slightly transparent white (main paragraph): hsla(0, 0%, 100%, 0.75)
-- Slightly transparent white (stat headings): hsla(0, 0%, 100%, 0.6)
-
-## Typography
-
-### Body Copy
-
-- Font size: 15px
-
-### Font
-
-- Family: [Inter](https://fonts.google.com/specimen/Inter)
-- Weights: 400, 700
-
-- Family: [Lexend Deca](https://fonts.google.com/specimen/Lexend+Deca)
-- Weights: 400
-*/
-
 *, *::before,*::after { 
     box-sizing: border-box;
     margin: 0;
@@ -48,7 +10,7 @@ The designs were created to the following widths:
     --main-bg-color:#0A0C1B;
     --card-bg-color: #1C1938;
     --main-text-color:#FFFFFF;
-    --secondary-text-color:#a3a1b4;
+    --secondary-text-color:#c9c9ca;
     --filter-color:#aa5cdb;
     --padding-for-mobile:4rem;
     --padding-for-desktop:6rem;
@@ -66,7 +28,9 @@ body {
     background-color: var(--main-bg-color);
     padding: 2rem;
     display: flex;
-    align-items: center;
+    flex-direction: column;
+    justify-content: space-between;
+
 }
 
 main { 
@@ -78,6 +42,7 @@ main {
     align-items: center;
 
 }
+
 
 
 section { 
@@ -92,6 +57,7 @@ section {
     position: relative;
     z-index: 1;
     overflow: hidden;
+    max-width: 37.5rem;
 }
 
 .pictureContainer { 
@@ -160,12 +126,8 @@ section {
 .attribution { 
     padding:1rem;
     font-size: 1.8rem;
-    margin: 0 auto;
     text-align: center;
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
+    position: relative;
 }
 
 .attribution a { 
@@ -180,6 +142,7 @@ section {
 @media screen and (min-width:760px) { 
     .cardContainer { 
         flex-direction: row-reverse;
+        max-width: 100%;
     }
     .textContainer { 
         text-align: left;
